<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoPhone</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">DoPhone</string>
    <string name="dummy_button">进入DoPhone</string>
    <string name="dummy_content">Do\nPhone</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="title_activity_safe__phone__setup2">Safe_Phone_Setup2</string>
    <string name="title_activity_safe__phone__setup3">Safe_Phone_Setup3</string>
    <string name="title_activity_select_contact">SelectContactActivity</string>
    <string name="title_activity_safe__phone__setup4">Safe_Phone_Setup4</string>
    <string name="title_activity_function_usage">FunctionUsageActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- 登陆及注册   initialize 初始化 -->
    <string name="i_login_name">登陆</string>
    <string name="i_register_name">注册</string>
    <string name="i_mobile_number">请输入您的手机号码</string>
    <string name="i_password">密码</string>
    <string name="in_password">请输入您的密码</string>
    <string name="i_password_again">请确认您的密码</string>
    <string name="i_msg_code">请输入您的短信验证码</string>
    <string name="i_get_code">验证码</string>
    <string name="i_forget_pass">忘记密码?</string>
    <string name="i_title_activity_register">RegisterActivity</string>
    <string name="i_back">返回</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_activity_edit_contact">EditContactActivity</string>
    <string name="title_activity_sms">SmsActivity</string>

</resources>
