<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:orientation="vertical"
    android:background="@color/blue1"
    android:fitsSystemWindows="true" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_title_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@color/gray_dan"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/login_phone" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray_xiantiao" />

                <EditText
                    android:id="@+id/ed_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="请输入用户名"
                    android:maxLength="11"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_dan"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/login_password" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray_xiantiao" />

                <EditText
                    android:id="@+id/ed_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="@string/in_password"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_dan"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/login_password" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray_xiantiao" />

                <EditText
                    android:id="@+id/ed_repwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:maxLength="32"
                    android:hint="请再次输入您的密码"
                    android:inputType="textPassword"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.1dp"
                android:layout_marginTop="5dp"
                android:background="@color/gray_line"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_dan"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/login_phone" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray_xiantiao" />

                <EditText
                    android:id="@+id/ed_regcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/i_msg_code"
                    android:inputType="textPassword"
                    android:maxLength="6"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_getCode"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:background="@color/blue3"
                    android:gravity="center"
                    android:text="@string/i_get_code"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/blue3"
                android:text="@string/i_register_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/i_back" />
        </LinearLayout>

</LinearLayout>